@@ -1,10 +1,3 @@
-# 28 Mar 2010;A. Vinogradov <spamslepnoga@inbox.ru>
-#  CVE-2010-0465
-=www-apps/sugarcrm-5.5.0
-
-# 22  Mar 2010;A. Vinogradov <spamslepnoga@inbox.ru>
-#  mask for bad depend in ebuild: require boost, qt-dbus, etc
-
 # 22  Mar 2010;A. Vinogradov <spamslepnoga@inbox.ru>
 # mask for testing
 www-apps/webgui
