@@ -1,7 +1,5 @@
 AUX postinstall-en.txt 271 RMD160 add1e5127a92ce1bea1c867a6bab4d49467b2b5f SHA1 1966f3c2f815276a5d25e90f5841b152c8131419 SHA256 674d1bb821b4dc9b64880e12b0e8ca62f439128d92c936e4337782be6b5d9878
-DIST SugarCE-5.5.0.zip 15725059 RMD160 f15669e860cbbe545372dad28a4be126c6c0dbb9 SHA1 80d5bf32e4b4b4f4682b278f66be4cc378754c47 SHA256 d9518b85d065cfa80efcfcb63afa930d06903be8f893d11d46d6176a6a1420d6
 DIST SugarCE-5.5.1.zip 14452352 RMD160 610f9509996ded74f18f22155a319c2327c6f399 SHA1 cd1b1642d737799f61c62d1050cda54f9002bec4 SHA256 75aac87d5a73d3df17b15e65b067a5d3b81bcba48e1cadde6c9155198c2323a3
-EBUILD sugarcrm-5.5.0.ebuild 1652 RMD160 3de7f00320e9ef61ebce58cd6e04b6030ea72046 SHA1 f2315d115df64e6442a1b1f4147b77f4a87bf290 SHA256 06b7d4d0bdca2d39575eda612b9b734a68a0d7b01fcee14897f7319482f90845
 EBUILD sugarcrm-5.5.1.ebuild 1754 RMD160 4b69a986204d0ac34f0dbd591474ecb491789112 SHA1 a97767c3adb6ff0788c5812de58eaad40295f273 SHA256 b601ccdc8a0fe7db256639ecc3294d6815a8ec54352f2d2f7c925eecc38eedc3
-MISC ChangeLog 2325 RMD160 e90abd170a82c5f1715eebe420d4a813938f9ce5 SHA1 ba16fd97b4f31713529950da767e90385b603130 SHA256 32541804819e7cc5be1fb1c18caae938a32e304cd9a6e8664989dcf25788ed15
+MISC ChangeLog 2423 RMD160 7ddd1e89d5c7b652defa7140a8e64f5dc7f0726c SHA1 e537fe94dab78e436ba15c7519af55bee9bf12c1 SHA256 63bd2b933593ca657dd235cc27fb5642b39165913fe94414b8c538a0c67d3766
 MISC metadata.xml 284 RMD160 1019fd51daed9c34a494761014d60eb606421a0b SHA1 12c23784f913732db6c55b500655b99e7282d009 SHA256 bd0ec6d455161a96149013a599770f7d2827bbdc94357f538f0050b1e6b8cdc6
